# mountain

./: .eslintrc.yml  .gitignore  README.md  bot.py  config.example.json  package-lock.json  package.json  pyproject.toml  test.py  tsconfig.json
cogs/: events.py  question_management.py  start.py
data/guilds.leveldb/: 000007.sst  000010.sst  LOG  LOG.old  MANIFEST-000122
data/tags.leveldb/: 000054.ldb  000057.ldb  000059.ldb  000061.ldb  000064.ldb  LOG  LOG.old  MANIFEST-000063
database/: database.sqlite3  schema.sql
resources/: Form nhập đề thi.xlsx
src/: index.ts  scrape-emojis.ts  setup.ts
src/commands/misc/: avatar.ts  misc.ts  ping.ts  selfdestruct.ts  tag.ts
src/data/model/: filterword.ts  guild.ts  index.ts  tag.ts  user.ts
src/data/services/: data-provider.ts  filter-word-service.ts  guild-service.ts  tag-service.ts
src/events/: command-handler.ts  join-leave.ts  start.ts
src/utils/: autocompleters.ts  client.ts  config.ts  context.ts  exceptions.ts  permissions.ts
utils/: config.py  context.py  typings.py
utils/framework/: checks.py
utils/rounds/: answer_matching.py  obstacle.py  start.py
utils/views/: start.py
